<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/category_calculator">
        <CheckBoxPreference
            android:key="checkBox_smoothScroll"
            android:summary="@string/chbSmoothScroll_summary"
            android:title="@string/chbSmoothScroll_title"
            android:defaultValue="true">
        </CheckBoxPreference>
        <CheckBoxPreference
            android:key="checkBox_hideKB_calc"
            android:summary="@string/chbKB_hide_calc_summary"
            android:title="@string/chbKB_hide_calc_title"
            android:defaultValue="true">
        </CheckBoxPreference>
        <!--android:defaultValue="0" -->
        <!--<ListPreference
                android:entries="@array/entries"
                android:entryValues="@array/entry_values"
                android:key="list2"
                android:summary="@string/list2_summary"
                android:title="@string/list2_title">
        </ListPreference>-->
        <ListPreference
            android:entries="@array/entries_round"
            android:entryValues="@array/entry_values_round"
            android:defaultValue="5"
            android:key="list_round_calculator"
            android:summary="@string/list_round_summary"
            android:title="@string/list_round_title">
        </ListPreference>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_matrix">
        <ListPreference
            android:entries="@array/entries_round"
            android:entryValues="@array/entry_values_round"
            android:defaultValue="5"
            android:key="list_round_matrix"
            android:summary="@string/list_round_summary"
            android:title="@string/list_round_title">
        </ListPreference>
    </PreferenceCategory>
</PreferenceScreen>